--- a/code-geass.html
+++ b/code-geass.html
@@ -25,7 +25,7 @@
             <iframe  src="https://www.youtube.com/embed/iUfPGtN00JM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </article>
         <details class="container-episode">
-            <summary >capitulos</summary>
+            <summary >capitulos de codigo anime</summary>
             <nav class="episode-box">
                 <a href="" class="capitulo">capitulo 1 el dia en que nació el demonio</a>
                 <a href="" class="capitulo">capitulo 2 el caballero blanco despierta</a>
