algo paso con el menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Código Anime</title>
 </head>
 <body>
-    <a href="code-geass.html">code geass</a>
+    <a href="r1-capitulo1.html">code geass</a>
 </body>
 </html>
