--- a/r1-capitulo1.html
+++ b/r1-capitulo1.html
@@ -21,7 +21,7 @@
         </figure>
         <article class="container-video">
             <h2 class="title__video">capitulo 1 : el dia en que nacio el demonio</h2>
-            <article class="video">
+            <article< class="video">
                 <video class="video__item" src="https://fvs.io/redirector?token=OW1ZeTZ6cThMUVR0VVVlNmVNd0RVRVhTa1l2eU5ZNERUcDEzblFNZ3djbjhSM3J1TlFGMjZtM0dlWlNnM2t3L1VNTE1OQ0ppQ2hLZnJ5VFBXRFNhSjZnak9KUE1yMTFUdGNoRkYvcWZZNWVYbWkxUW5wV1hjWXlRTWpzQ1dXZkdianRROUNaVWhSTTB2Ym5QQVBzYkwydVBaOHo1OmN5TEFlekpONUFjQW0vTk1QcE8vbEE9PQs3qz" controls></video>
             </article>
             <details class="episode-box">
@@ -52,6 +52,7 @@
                     <a href="./r1-capitulo23" class="capitulo__item">capitulo 23: Al menos con dolor</a>
                     <a href="./r1-capitulo24" class="capitulo__item">capitulo 24: La etapa del derrumbamiento</a>
                     <a href="./r1-capitulo25" class="capitulo__item">capitulo 25: Zero</a>
+                    <div class=""></div>
                 </article>
            </details>
         </article>
