--- a/code-geass/capitulo1.html
+++ b/code-geass/capitulo1.html
@@ -25,36 +25,37 @@
         <article class="container-video">
             <p class="title__video">capitulo 1 : el dia en que nacio el demonio</p>
             <article< class="video">
-                <iframe width="1280" height="720" src="//sendvid.com/embed/mrjv93hx" frameborder="0" allowfullscreen></iframe>            </article>   
+                <iframe width="1280" height="720" src="//sendvid.com/embed/olcsa1gr" frameborder="0" allowfullscreen></iframe>
+            </article>   
         </article>
         <details class="episode-box">
             <summary class="text-episode">Code Geass: capitulos</summary>
             <article class="capitulo-box">
-                <a href="./capitulo1" class="capitulo__item">capitulo 1: el dia en que nació el demonio</a>
-                <a href="./capitulo2" class="capitulo__item">capitulo 2: el caballero blanco despierta</a>
-                <a href="./capitulo3" class="capitulo__item">capitulo 3: el compañero de clase falso</a>
-                <a href="./capitulo4" class="capitulo__item">capitulo 4: su nombre es zero</a>
-                <a href="./capitulo5" class="capitulo__item">capitulo 5: la princesa y la bruja</a>
-                <a href="./capitulo6" class="capitulo__item">capitulo 6: la máscara robada</a>
-                <a href="./capitulo7" class="capitulo__item">capitulo 7: el ataque a cornelia</a>
-                <a href="./capitulo8" class="capitulo__item">capitulo 8: los caballeros negros</a>
-                <a href="./capitulo9" class="capitulo__item">capitulo 9: refrain</a>
-                <a href="./capitulo10" class="capitulo__item">capitulo 10: la danza de los guren</a>
-                <a href="./capitulo11" class="capitulo__item">capitulo 11: batalla por narita</a>
-                <a href="./capitulo12" class="capitulo__item">capitulo 12: el mensaje de kyoto</a>
-                <a href="./capitulo13" class="capitulo__item">capitulo 13: shirley en la mira</a>
-                <a href="./capitulo14" class="capitulo__item">capitulo 14: geass vs geass</a>
-                <a href="./capitulo15" class="capitulo__item">capitulo 15: el animado mao</a>
-                <a href="./capitulo16" class="capitulo__item">capitulo 16: Nunnally como rehén</a>
-                <a href="./capitulo17" class="capitulo__item">capitulo 17: caballero</a>
-                <a href="./capitulo18" class="capitulo__item">capitulo 18: Te ordeno Suzaku Kururugi </a>
-                <a href="./capitulo19" class="capitulo__item">capitulo 19: Isla de los dioses</a>
-                <a href="./capitulo20" class="capitulo__item">capitulo 20: Batalla por Kyushu</a>
-                <a href="./capitulo21" class="capitulo__item">capitulo 21: Declaración en el Festival Escolar</a>
-                <a href="./capitulo22" class="capitulo__item">capitulo 22: Euphie ensangrentada</a>
-                <a href="./capitulo23" class="capitulo__item">capitulo 23: Al menos con dolor</a>
-                <a href="./capitulo24" class="capitulo__item">capitulo 24: La etapa del derrumbamiento</a>
-                <a href="./capitulo25" class="capitulo__item">capitulo 25: Zero</a>
+                <a href="./capitulo1.html" class="capitulo__item">capitulo 1: el dia en que nació el demonio</a>
+                <a href="./capitulo2.htmñ" class="capitulo__item">capitulo 2: el caballero blanco despierta</a>
+                <a href="./capitulo3.htmñ" class="capitulo__item">capitulo 3: el compañero de clase falso</a>
+                <a href="./capitulo4.htmñ" class="capitulo__item">capitulo 4: su nombre es zero</a>
+                <a href="./capitulo5.htmñ" class="capitulo__item">capitulo 5: la princesa y la bruja</a>
+                <a href="./capitulo6.htmñ" class="capitulo__item">capitulo 6: la máscara robada</a>
+                <a href="./capitulo7.htmñ" class="capitulo__item">capitulo 7: el ataque a cornelia</a>
+                <a href="./capitulo8.htmñ" class="capitulo__item">capitulo 8: los caballeros negros</a>
+                <a href="./capitulo9.htmñ" class="capitulo__item">capitulo 9: refrain</a>
+                <a href="./capitulo10.html" class="capitulo__item">capitulo 10: la danza de los guren</a>
+                <a href="./capitulo11.html" class="capitulo__item">capitulo 11: batalla por narita</a>
+                <a href="./capitulo12.html" class="capitulo__item">capitulo 12: el mensaje de kyoto</a>
+                <a href="./capitulo13.html" class="capitulo__item">capitulo 13: shirley en la mira</a>
+                <a href="./capitulo14.html" class="capitulo__item">capitulo 14: geass vs geass</a>
+                <a href="./capitulo15.html" class="capitulo__item">capitulo 15: el animado mao</a>
+                <a href="./capitulo16.html" class="capitulo__item">capitulo 16: Nunnally como rehén</a>
+                <a href="./capitulo17.html" class="capitulo__item">capitulo 17: caballero</a>
+                <a href="./capitulo18.html" class="capitulo__item">capitulo 18: Te ordeno Suzaku Kururugi </a>
+                <a href="./capitulo19.html" class="capitulo__item">capitulo 19: Isla de los dioses</a>
+                <a href="./capitulo20.html" class="capitulo__item">capitulo 20: Batalla por Kyushu</a>
+                <a href="./capitulo21.html" class="capitulo__item">capitulo 21: Declaración en el Festival Escolar</a>
+                <a href="./capitulo22.html" class="capitulo__item">capitulo 22: Euphie ensangrentada</a>
+                <a href="./capitulo23.html" class="capitulo__item">capitulo 23: Al menos con dolor</a>
+                <a href="./capitulo24.html" class="capitulo__item">capitulo 24: La etapa del derrumbamiento</a>
+                <a href="./capitulo25.html" class="capitulo__item">capitulo 25: Zero</a>
                 
             </article>
        </details>
