poniendo el capitulo2

--- a/code-geass/capitulo2.html
+++ b/code-geass/capitulo2.html
@@ -23,22 +23,23 @@
         <figure class="presentacion"><img src="https://flxt.tmsimg.com/assets/p186544_b_v8_ad.jpg" alt="code geass r1">
         </figure>
         <article class="container-video">
-            <p class="title__video">capitulo 1 : el dia en que nacio el demonio</p>
+            <p class="title__video">capitulo 2: el caballero blanco despierta</p>
             <article< class="video">
-                <iframe width="1280" height="720" src="//sendvid.com/embed/mrjv93hx" frameborder="0" allowfullscreen></iframe>            </article>   
+                <iframe width="1280" height="720" src="//sendvid.com/embed/9p9hphbm" frameborder="0" allowfullscreen></iframe>
+            </article>   
         </article>
         <details class="episode-box">
             <summary class="text-episode">Code Geass: capitulos</summary>
             <article class="capitulo-box">
-                <a href="./capitulo1.html" class="capitulo__item black">capitulo 1: el dia en que nació el demonio</a>
-                <a href="./capitulo2.html" class="capitulo__item">capitulo 2: el caballero blanco despierta</a>
-                <a href="./capitulo3.html" class="capitulo__item">capitulo 3: el compañero de clase falso</a>
-                <a href="./capitulo4.html" class="capitulo__item">capitulo 4: su nombre es zero</a>
-                <a href="./capitulo5.html" class="capitulo__item">capitulo 5: la princesa y la bruja</a>
-                <a href="./capitulo6.html" class="capitulo__item">capitulo 6: la máscara robada</a>
-                <a href="./capitulo7.html" class="capitulo__item">capitulo 7: el ataque a cornelia</a>
-                <a href="./capitulo8.html" class="capitulo__item">capitulo 8: los caballeros negros</a>
-                <a href="./capitulo9.html" class="capitulo__item">capitulo 9: refrain</a>
+                <a href="./capitulo1.html" class="capitulo__item">capitulo 1: el dia en que nació el demonio</a>
+                <a href="./capitulo2.htmñ" class="capitulo__item black">capitulo 2: el caballero blanco despierta</a>
+                <a href="./capitulo3.htmñ" class="capitulo__item">capitulo 3: el compañero de clase falso</a>
+                <a href="./capitulo4.htmñ" class="capitulo__item">capitulo 4: su nombre es zero</a>
+                <a href="./capitulo5.htmñ" class="capitulo__item">capitulo 5: la princesa y la bruja</a>
+                <a href="./capitulo6.htmñ" class="capitulo__item">capitulo 6: la máscara robada</a>
+                <a href="./capitulo7.htmñ" class="capitulo__item">capitulo 7: el ataque a cornelia</a>
+                <a href="./capitulo8.htmñ" class="capitulo__item">capitulo 8: los caballeros negros</a>
+                <a href="./capitulo9.htmñ" class="capitulo__item">capitulo 9: refrain</a>
                 <a href="./capitulo10.html" class="capitulo__item">capitulo 10: la danza de los guren</a>
                 <a href="./capitulo11.html" class="capitulo__item">capitulo 11: batalla por narita</a>
                 <a href="./capitulo12.html" class="capitulo__item">capitulo 12: el mensaje de kyoto</a>
